# energy-demand-prediction

./: .dockerignore  .dvcignore  .gitignore  AGENTS.md  Dockerfile  Makefile  PROJECT_REPORT.md  README.md  SESSION_NOTES.md  conftest.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.dvc/: config
.github/workflows/: ml_pipeline.yml
api/: __init__.py  app.py  model_store.py  schemas.py
dashboard/: app.py
notebooks/: 01_data_ingestion.ipynb  02_forecasting.ipynb  03_anomaly_detection.ipynb  04_classification.ipynb  05_llm_report.ipynb  06_diagnostics.ipynb
reports/: energy_forecast_report.md
src/data/: __init__.py  feature_engineering.py  terna_loader.py
src/llm/: report_generator.py
src/models/: __init__.py  explainability.py  ml_models.py
src/monitoring/: __init__.py  mlops.py
tests/: test_pipeline.py
